[package]
name = "sadmin2"
version = "0.1.0"
edition = "2021"

[features]
daemon = [
    "log",
    "sdnotify",
    "nix",
    "tokio-tasks",
    "chrono",
    "cgroups-rs",
    "passfd",
    "hyper",
    "tempfile",
    "rusqlite"]

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
dirs = "5"
futures-util = "0.3"
itertools = "0.13"
log = {version = "0.4", optional=true}
rand = "0.8"
rpassword = "7"
serde = { version = "1", default-features = false, features=['std', 'derive']}
serde_json = { version = "1", default-features = false, features=['std'] }
tokio = { version = "1", default-features = false, features=['rt', 'net', 'fs', 'sync', 'macros', 'time', 'process', 'signal'] }
tokio-rustls = {version="0.26"}
tokio-tungstenite = { version = "0.23", features=['rustls-tls-webpki-roots']}
webpki = "0.22"
webpki-roots = "0.26"
simple_logger = {version = "5", default-features=false }
tempfile = {version="3", optional=true}
clap = {version = "4", default-features = false, features=['std', 'derive', 'help', 'suggestions', 'usage', 'color']}
sdnotify = {version = "0.2", default-features = false, optional=true}
reqwest = {version = "0.12",  default-features = false, features=['json', 'rustls-tls-webpki-roots']}
zip = {version= "2",  default-features = false, features=['deflate']}
indicatif = "0.17"
nix = { version = "0.29", default-features = false, features = ["signal", "user", "fs", "event", "socket", "uio"], optional=true}
rusqlite = { version = "0.32", features = ["bundled"], optional=true}
serde_yaml = "0.9"
cgroups-rs = {version = "0.2", optional=true}
passfd = {version = "0.1", optional=true}
tokio-tasks = {version = "0.2", optional=true}
chrono = {version = "0.4", default-features = false, features = ["std", "clock"], optional=true}
hyper = { version = "1", features = ["server", "http1"], optional=true}
hyper-util = { version = "0.1", features = ["http1", "tokio", "server"]}
http-body-util = "0.1"

