[package]
name = "sadmin2"
version = "0.2.0"
edition = "2024"

[features]
server = [
    "axum",
    "base32",
    "futures",
    "hex",
    "libc",
    "log",
    "sha2",
    "sqlx-type",
    "sqlx",
    "tempfile",
    "tokio-tasks",
    "tokio-util",
    "totp-rs",
    "uuid",
]
daemon = [
    "cgroups-rs",
    "chrono",
    "hyper",
    "log",
    "nix",
    "passfd",
    "rusqlite",
    "sdnotify",
    "tempfile",
    "tokio-tasks",
    "futures",
]
nix = ["dep:nix"]

all = ["daemon", "server"]

[[bin]]
name = "simpleadmin-server"
required-features = ["server"]
path = "src/bin/server/main.rs"

[dependencies]
anyhow = "1"
axum = {version = "0.8",  default-features = false, features = ["ws", "tokio", "json", "query", "http1"], optional = true}
base32 = {version = "0.5", optional = true}
base64 = "0.22"
bytes = "1"
cgroups-rs = {version = "0.2", optional=true}
chrono = {version = "0.4", default-features = false, features = ["std", "clock"], optional=true}
clap = {version = "4", default-features = false, features=['std', 'derive', 'help', 'suggestions', 'usage', 'color']}
dirs = "6"
futures = {version = "0.3", optional = true}
futures-util = "0.3"
hex = {version = "0.4", optional = true}
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"], optional=true}
hyper-util = { version = "0.1", features = ["http1", "tokio", "server"]}
indicatif = "0.17"
itertools = "0.14"
libc = {version="0.2", optional = true}
log = {version = "0.4", optional=true}
nix = { version = "0.30", default-features = false, features = ["signal", "user", "fs", "event", "socket", "uio", "term"], optional = true }
passfd = {version = "0.1", optional=true}
rand = "0.9"
reqwest = {version = "0.12",  default-features = false, features=['json', 'rustls-tls-webpki-roots']}
rpassword = "7"
rusqlite = { version = "0.32", features = ["bundled"], optional=true}
rustls = {version = "0.23", features=["aws_lc_rs"]}
sdnotify = {version = "0.2", default-features = false, optional=true}
serde = { version = "1", default-features = false, features=['std', 'derive']}
serde_json = { version = "1", default-features = false, features=['std', "float_roundtrip", "preserve_order"] }
serde_repr = {version = "0.1"}
serde_yaml = "0.9"
sha2 = {version="0.10", optional = true}
simple_logger = {version = "5", default-features=false}
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"], optional = true}
sqlx-type = {version = "0.4", optional = true}
tempfile = {version="3", optional=true}
tokio = { version = "1", default-features = false, features=['rt', 'net', 'fs', 'sync', 'macros', 'time', 'process', 'signal', 'io-std', 'rt-multi-thread'] }
tokio-rustls = "0.26"
tokio-tasks = {version = "0.2", optional=true}
tokio-tungstenite = { version = "0.26", features=['rustls-tls-webpki-roots']}
tokio-util = {version = "0.7", features = ["io"], optional = true}
totp-rs= {version="5", features = ["otpauth"], optional = true}
ts-rs = {version="10", features = ["serde-compat", "chrono-impl", "serde-json-impl", "no-serde-warnings", "indexmap-impl"]}
uuid = {version="1", features = ["v4", "serde"], optional = true}
webpki = "0.22"
webpki-roots = "1"
zip = {version= "4",  default-features = false, features=['deflate']}
