[package]
name = "simple_admin_server_rs"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
base32 = "0.5"
chrono = "0.4.39"
futures = "0.3"
libc = "0.2"
log = "0.4"
neon = {version="1.1.0-alpha.1", features = ["tokio-rt-multi-thread", "serde"]}
serde = {version="1", features = ["derive"]}
serde_json = {version = "1", features = ["float_roundtrip"]}
simple_logger = "5"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
sqlx-type = "0.4.6"
tempfile = "3"
tokio = {version = "1", features = ["process", "rt", "macros"]}
totp-rs= {version="5", features = ["otpauth"]}
ts-rs = {version="10", features = ["serde-compat", "chrono-impl", "serde-json-impl"]}
